# mcp-powerbi-desktop

./: .gitignore  Dockerfile  README.md  find_dll.ps1  forward_port.py  get_powerbi_info.ps1  get_powerbi_info.py  mcp_server.py  proxy.ps1  pyproject.toml  scan_all_ports.py  test_container.py  test_direct_wsl.py  test_live_mcp.py  test_mcp_connection.py  test_native.py  test_ports.py  test_query.py  test_query_port.py  test_raw_socket.py  test_tmsl.ps1  test_tom.ps1  test_tom_load.ps1  test_validation.py  test_xmla_alter.ps1
powerbi/: __init__.py  model_reader.py  model_writer.py  process_detection.py  tmsl_executor.py  xmla_connection.py
tools/: create_measure.py  get_calculated_columns.py  get_measure.py  get_model_metadata.py  get_relationships.py  inspect_table.py  list_instances.py  list_measures.py  list_table_columns.py  preview_table_data.py  run_tmsl.py  select_instance.py  update_measure.py
