[tool.poetry]
name = "power-bi-mcp"
version = "0.1.0"
description = "MCP server for Power BI Desktop semantic models"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "powerbi"}, {include = "tools"}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = ">=1.0.0"
httpx = "^0.27.0"
psutil = "^5.9.8"
xmltodict = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
